Login finished and tested in frontend

--- a/Frontend/src/app/components/header/header.component.html
+++ b/Frontend/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <nav class="header">
     <div class="image centered">
-        <img src="assets/img/Logo2.PNG" alt="Hotel's logo">
+        <img src="assets/img/logo.png" alt="Hotel's logo">
     </div>
-    <div class="title centered">
+    <div class="title">
         <h1>Manage your hotel</h1>
     </div>
 </nav>
