--- a/Frontend/src/scss/abstracts/_variables.scss
+++ b/Frontend/src/scss/abstracts/_variables.scss
@@ -1,2 +1,16 @@
-$headerBackgroundColor: #024E7E;
+// Common variables
+$textColor: #82FCF0;
+$bgColor: #024873;
+
+// Header variables
+$headerBackgroundColor: #001b2c;
 $headerTitleColor: #04C8B4;
+
+// Buttons variables
+$buttonBgColor: #F49471;
+$buttonTextColor: #5E1F08;
+$buttonTextSize: 3vh;
+$buttonPadding: 1vh 3vw;
+$buttonRadius: 6px;
+$disabledButtonBgColor: #FBDBD0;
+$disabledButtonTextColor: #A5360D;
