--- a/Frontend/src/scss/main.scss
+++ b/Frontend/src/scss/main.scss
@@ -9,6 +9,8 @@
 @import 'components/container';
 @import 'components/dialog';
 @import 'components/form';
+@import 'components/material';
 @import 'components/nav';
 @import 'components/pagination';
+@import 'components/tipography';
 // pages
