Hotel's management main page finished in frontend. Favicon added

--- a/Frontend/src/app/components/header/header.component.html
+++ b/Frontend/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="header">
     <div class="image centered">
-        <img src="assets/img/logo.png" alt="Hotel's logo">
+        <img src="assets/img/Logo.PNG" alt="Hotel's logo">
     </div>
     <div class="title">
         <h1>Manage your hotel</h1>
