--- a/Frontend/src/app/components/header/header.component.scss
+++ b/Frontend/src/app/components/header/header.component.scss
@@ -1,1 +1,31 @@
 @import 'src/scss/main';
+
+.taskbar
+{
+    height: 6vh;
+    width: 100vw;
+    background-color: $bgColor;
+    color: $textColor;
+    padding-top: 2vh;
+}
+
+.rightCentered
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.welcome,
+.icons
+{
+    height: 6vh;
+    margin: 1.5vh;
+    font-size: 3vh;
+
+    .mat-icon
+    {
+        margin: 0 2vw;
+    }
+}
