--- a/Frontend/src/app/modules/hotel/components/main-hotel/main-hotel.component.html
+++ b/Frontend/src/app/modules/hotel/components/main-hotel/main-hotel.component.html
@@ -1,11 +1,11 @@
 <div class="main column">
-    <div class="button">
+    <div class="button" (click)="goClients()">
         <mat-icon>person_outline</mat-icon>
     </div>
-    <div class="button">
+    <div class="button" (click)="goRooms()">
         <mat-icon>bed</mat-icon>
     </div>
-    <div class="button">
+    <div class="button" (click)="goEmployees()">
         <mat-icon>badge</mat-icon>
     </div>
 </div>
