--- a/Frontend/src/app/modules/hotel/components/clients-management/clients-management.component.html
+++ b/Frontend/src/app/modules/hotel/components/clients-management/clients-management.component.html
@@ -1,11 +1,11 @@
-<div class="main">
+<div class="main column">
     <h1>Client management</h1>
 
     <div class="firstRow">
         <form [formGroup]=searchForm>
             <mat-form-field appearance="standard" class="loginField">
                 <mat-label>Search</mat-label>
-                <input matInput placeholder="search" formControlName="search">
+                <input matInput (keyup)="applyFilter($event)" placeholder="search" formControlName="search">
                 <button class="icon" mat-icon-button matSuffix>
                     <mat-icon>search</mat-icon>
                 </button>
@@ -16,34 +16,36 @@
         </div>
     </div>
 
-    <div class="table">
-        <table mat-table [dataSource]="clientsList">
+    <div class="table column">
+        <table mat-table [dataSource]="dataSource | paginate: {itemsPerPage: 10, currentPage: page}" matSort >
             <!-- Name column -->
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef>Name</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
                 <td mat-cell *matCellDef="let client">{{client.name}}</td>
             </ng-container>
             <!-- Surname column -->
             <ng-container matColumnDef="surname">
-                <th mat-header-cell *matHeaderCellDef>Surname</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
                 <td mat-cell *matCellDef="let client">{{client.surname}}</td>
             </ng-container>
             <!-- DNI column -->
             <ng-container matColumnDef="dni">
-                <th mat-header-cell *matHeaderCellDef>DNI</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>DNI</th>
                 <td mat-cell *matCellDef="let client">{{client.dni}}</td>
             </ng-container>
             <!-- Details column -->
             <ng-container matColumnDef="details">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let client">
-                    <button>Details</button>
+                    <button (click)="showDetails(client.dni)">Details</button>
                 </td>
             </ng-container>
             <!-- Row templates -->
             <tr mat-header-row *matHeaderRowDef="tableCols"></tr>
             <tr mat-row *matRowDef="let client; columns: tableCols;"></tr>
         </table>
+        <pagination-controls class="pagination" (pageChange)="page = $event" autoHide="true" previousLabel="" nextLabel=""
+        screenReaderPaginationLabel="Pagination" screenReaderPageLabel="Page" screenReaderCurrentLabel="Current page"></pagination-controls>
     </div>
 
 </div>
