Added ids in HTML to make Selenium tests

--- a/Frontend/src/app/components/header/header.component.html
+++ b/Frontend/src/app/components/header/header.component.html
@@ -13,8 +13,8 @@
                 <p>Welcome {{user.username}} </p>
             </div>
             <div class="icons">
-                <mat-icon (click)="goHome()">home</mat-icon>
-                <mat-icon (click)="logOut()">logout</mat-icon>
+                <mat-icon (click)="goHome()" id="goHome">home</mat-icon>
+                <mat-icon (click)="logOut()" id="logOut">logout</mat-icon>
             </div>
         </div>
     </div>
