--- a/Frontend/src/app/modules/hotel/components/main-hotel/main-hotel.component.html
+++ b/Frontend/src/app/modules/hotel/components/main-hotel/main-hotel.component.html
@@ -1,11 +1,11 @@
 <div class="main column">
-    <div class="button" (click)="goClients()">
+    <div class="button" (click)="goClients()" id="clientManagement">
         <mat-icon>person_outline</mat-icon>
     </div>
-    <div class="button" (click)="goRooms()">
+    <div class="button" (click)="goRooms()" id="roomManagement">
         <mat-icon>bed</mat-icon>
     </div>
-    <div class="button" (click)="goEmployees()">
+    <div class="button" (click)="goEmployees()" id="employeesManagement">
         <mat-icon>badge</mat-icon>
     </div>
 </div>
