--- a/Frontend/src/app/components/alerts/alerts.component.html
+++ b/Frontend/src/app/components/alerts/alerts.component.html
@@ -8,7 +8,7 @@
     <h1 class="alertIcon" mat-dialog-type><mat-icon aria-hidden="false" aria-label="Error">error_outline</mat-icon></h1>
     <div mat-dialog-content> {{data.text}} </div>
     <div mat-dialog-actions>
-        <button mat-button mat-dialog-close>Close</button>
+        <button mat-button mat-dialog-close id="closeError">Close</button>
     </div>
 </div>
 
@@ -17,8 +17,8 @@
     <h1 class="alertIcon" mat-dialog-type><mat-icon aria-hidden="false" aria-label="Qustion">help_outline</mat-icon></h1>
     <div mat-dialog-content> {{data.text}} </div>
     <div mat-dialog-actions>
-        <button mat-button [mat-dialog-close]="alertTypeClass.CANCEL" cdkFocusInitial>Cancel</button>
-        <button mat-button [mat-dialog-close]="alertTypeClass.ACCEPT">Accept</button>
+        <button mat-button [mat-dialog-close]="alertTypeClass.CANCEL" cdkFocusInitial id="cancelConfirm">Cancel</button>
+        <button mat-button [mat-dialog-close]="alertTypeClass.ACCEPT" id="acceptConfirm">Accept</button>
     </div>
 </div>
 
@@ -27,6 +27,6 @@
     <h1 class="alertIcon" mat-dialog-title><mat-icon aria-hidden="false" aria-label="Info">info</mat-icon></h1>
     <div mat-dialog-content> {{data.text}} </div>
     <div mat-dialog-actions>
-        <button mat-button [mat-dialog-close]="alertTypeClass.ACCEPT" cdkFocusInitial>Aceptar</button>
+        <button mat-button [mat-dialog-close]="alertTypeClass.ACCEPT" cdkFocusInitial id="acceptAlert">Aceptar</button>
     </div>
 </div>
