--- a/Frontend/src/app/components/alerts/alerts.component.html
+++ b/Frontend/src/app/components/alerts/alerts.component.html
@@ -5,7 +5,7 @@
 
 <!-- Error -->
 <div *ngIf="data.type == alertTypeClass.ERROR">
-    <h1 class="alertIcon" mat-dialog-type><mat-icon aria-hidden="false" aria-label="Error">error_outline</mat-icon></h1>
+    <h1 class="alertIcon" mat-dialog-title><mat-icon aria-hidden="false" aria-label="Error">error_outline</mat-icon></h1>
     <div mat-dialog-content> {{data.text}} </div>
     <div mat-dialog-actions>
         <button mat-button mat-dialog-close id="closeError">Close</button>
@@ -14,7 +14,7 @@
 
 <!-- Confirm -->
 <div *ngIf="data.type == alertTypeClass.CONFIRM">
-    <h1 class="alertIcon" mat-dialog-type><mat-icon aria-hidden="false" aria-label="Qustion">help_outline</mat-icon></h1>
+    <h1 class="alertIcon" mat-dialog-title><mat-icon aria-hidden="false" aria-label="Qustion">help_outline</mat-icon></h1>
     <div mat-dialog-content> {{data.text}} </div>
     <div mat-dialog-actions>
         <button mat-button [mat-dialog-close]="alertTypeClass.CANCEL" cdkFocusInitial id="cancelConfirm">Cancel</button>
