SCSS and media queries finished

--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
         <h1>Log in</h1>
     </div>
     <div class="loginForm">
-        <form [formGroup]=loginForm class="column">
+        <form [formGroup]=loginForm class="columnLogin">
             <mat-form-field appearance="outline" class="loginField">
                 <mat-label>Username</mat-label>
                 <input matInput placeholder="username" formControlName="username" required id="username">
