--- a/Frontend/src/app/modules/clients/components/main-client/main-client.component.html
+++ b/Frontend/src/app/modules/clients/components/main-client/main-client.component.html
@@ -1,4 +1,4 @@
-<div class="main column">
+<div class="main mainButtons">
     <div class="button" (click)="goUser()" id="userManagement">
         <mat-icon>person_outline</mat-icon>
     </div>
