--- a/Frontend/src/app/modules/hotel/components/new-stay/new-stay.component.html
+++ b/Frontend/src/app/modules/hotel/components/new-stay/new-stay.component.html
@@ -4,7 +4,7 @@
             <mat-card-title>Add stay</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <form [formGroup]=stayForm>
+            <form [formGroup]=stayForm class="column">
                 <mat-form-field appearance="outline" class="firstField">
                     <mat-label>Building name</mat-label>
                     <input matInput formControlName="buildingName" id="buildingName">
