--- a/Frontend/src/app/modules/hotel/components/room-details/room-details.component.html
+++ b/Frontend/src/app/modules/hotel/components/room-details/room-details.component.html
@@ -1,11 +1,11 @@
-<div class="main centered">
-    <h1>Room details</h1>
+<div class="main column">
+    <h1 class="topSpacing">Room details</h1>
     <mat-card>
         <mat-card-header>
             <mat-card-title>Room {{room.number}}</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <div class="content">
+            <div class="twoColumns">
                 <div class="left">
                     <p>Building</p>
                     <p>Type</p>
