--- a/Frontend/src/app/modules/hotel/components/update-room/update-room.component.html
+++ b/Frontend/src/app/modules/hotel/components/update-room/update-room.component.html
@@ -1,5 +1,5 @@
-<div class="main centered">
-    <h1>Update room</h1>
+<div class="main column">
+    <h1 class="topSpacing">Update room</h1>
     <mat-card>
         <mat-card-header>
             <mat-card-title>Room {{room.number}}</mat-card-title>
