--- a/Frontend/src/scss/components/_button.scss
+++ b/Frontend/src/scss/components/_button.scss
@@ -12,3 +12,16 @@ button:disabled
     background-color: $disabledButtonBgColor;
     color: $disabledButtonTextColor;
 }
+
+.button
+{
+    padding: 2vh;
+    margin: 3vh;
+    border: solid 4px $textColor;
+    border-radius: 20px;
+    width: 15vh;
+    .mat-icon
+    {
+        font-size: 15vh;
+    }
+}
