--- a/Frontend/src/scss/main.scss
+++ b/Frontend/src/scss/main.scss
@@ -12,5 +12,5 @@
 @import 'components/material';
 @import 'components/nav';
 @import 'components/pagination';
+@import 'components/table';
 @import 'components/tipography';
-// pages
