--- a/Frontend/src/app/modules/clients/components/stay-details/stay-details.component.html
+++ b/Frontend/src/app/modules/clients/components/stay-details/stay-details.component.html
@@ -5,7 +5,7 @@
             <mat-card-title>To {{stay.endDate}}</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <div class="content">
+            <div class="twoColumns">
                 <div class="left">
                     <p>Building</p>
                     <p>Room type</p>
