--- a/Frontend/src/app/modules/hotel/components/client-details/client-details.component.html
+++ b/Frontend/src/app/modules/hotel/components/client-details/client-details.component.html
@@ -1,51 +1,55 @@
-<div class="main column">
-    <h1>Client details</h1>
-    <div class="column clientDetailsForm">
-        <form #clientDetailsForm="ngForm">
-            <div class="field">
-                <label for="name"><b>Name</b></label>
-                <input type="text" required name="name" placeholder="Name" [(ngModel)]="client.name" #name="ngModel" id="name">
-                <div [hidden]="name.valid || name.untouched" class="validationError">
-                    Mandatory field
+<div class="main centered">
+    <mat-card>
+        <mat-card-header class="centered">
+            <mat-card-title>Client details</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <form #clientDetailsForm="ngForm">
+                <div class="field">
+                    <label for="name">Name</label>
+                    <input type="text" required name="name" placeholder="Name" [(ngModel)]="client.name" #name="ngModel" id="name">
+                    <div [hidden]="name.valid || name.untouched" class="validationError">
+                        Mandatory field
+                    </div>
                 </div>
-            </div>
-            <div class="field">
-                <label for="surname"><b>Surname</b></label>
-                <input type="text" required name="surname" placeholder="Surname" [(ngModel)]="client.surname" #surname="ngModel" id="surname">
-                <div [hidden]="surname.valid || surname.untouched" class="validationError">
-                    Mandatory field
+                <div class="field">
+                    <label for="surname">Surname</label>
+                    <input type="text" required name="surname" placeholder="Surname" [(ngModel)]="client.surname" #surname="ngModel" id="surname">
+                    <div [hidden]="surname.valid || surname.untouched" class="validationError">
+                        Mandatory field
+                    </div>
                 </div>
-            </div>
-            <div class="field">
-                <label for="dni"><b>DNI</b></label>
-                <input type="text" required name="dni" placeholder="DNI" [(ngModel)]="client.dni" #dni="ngModel" id="dni">
-                <div [hidden]="dni.valid || dni.untouched" class="validationError">
-                    Mandatory field
+                <div class="field">
+                    <label for="dni">DNI</label>
+                    <input type="text" required name="dni" placeholder="DNI" [(ngModel)]="client.dni" #dni="ngModel" id="dni">
+                    <div [hidden]="dni.valid || dni.untouched" class="validationError">
+                        Mandatory field
+                    </div>
                 </div>
-            </div>
-            <div class="field">
-                <label for="email"><b>Email</b></label>
-                <input type="text" required name="email" placeholder="Email" [(ngModel)]="client.email" #email="ngModel" id="email">
-                <div [hidden]="email.valid || email.untouched" class="validationError">
-                    Mandatory field
+                <div class="field">
+                    <label for="email">Email</label>
+                    <input type="text" required name="email" placeholder="Email" [(ngModel)]="client.email" #email="ngModel" id="email">
+                    <div [hidden]="email.valid || email.untouched" class="validationError">
+                        Mandatory field
+                    </div>
                 </div>
-            </div>
-            <div class="field">
-                <label for="address"><b>Address</b></label>
-                <input type="text" name="address" placeholder="Address" [(ngModel)]="client.address" #address="ngModel" id="address">
-            </div>
-            <div class="field">
-                <label for="phone"><b>Phone</b></label>
-                <input type="text" name="phone" placeholder="Phone" [(ngModel)]="client.phone" #phone="ngModel" id="phone">
-            </div>
-            <div class="field">
-                <label for="birthDate"><b>Birthdate</b></label>
-                <input type="text" name="birthDate" placeholder="Birthdate" [(ngModel)]="client.birthDate" #birthDate="ngModel" id="birthDate">
-            </div>
-        </form>
-        <div class="buttons">
+                <div class="field">
+                    <label for="address">Address</label>
+                    <input type="text" name="address" placeholder="Address" [(ngModel)]="client.address" #address="ngModel" id="address">
+                </div>
+                <div class="field">
+                    <label for="phone">Phone</label>
+                    <input type="text" name="phone" placeholder="Phone" [(ngModel)]="client.phone" #phone="ngModel" id="phone">
+                </div>
+                <div class="field">
+                    <label for="birthDate">Birthdate</label>
+                    <input type="text" name="birthDate" placeholder="Birthdate" [(ngModel)]="client.birthDate" #birthDate="ngModel" id="birthDate">
+                </div>
+            </form>
+        </mat-card-content>
+        <mat-card-actions>
             <button mat-button (click)="update()" [disabled]="!clientDetailsForm.form.valid" id="update">Update</button>
             <button mat-button (click)="back()" id="back">Back</button>
-        </div>
-    </div>
+        </mat-card-actions>
+    </mat-card>
 </div>
