--- a/Frontend/src/app/modules/hotel/components/clients-management/clients-management.component.html
+++ b/Frontend/src/app/modules/hotel/components/clients-management/clients-management.component.html
@@ -1,5 +1,5 @@
 <div class="main column">
-    <h1>Client management</h1>
+    <h1 class="pageTitle">Client management</h1>
 
     <div class="firstRow">
         <form [formGroup]=searchForm>
@@ -20,14 +20,14 @@
         <table mat-table [dataSource]="dataSource | paginate: {itemsPerPage: 10, currentPage: page}" matSort >
             <!-- Name column -->
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                <td mat-cell *matCellDef="let client">{{client.name}}</td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Full name</th>
+                <td mat-cell *matCellDef="let client">{{client.name}} {{client.surname}}</td>
             </ng-container>
             <!-- Surname column -->
-            <ng-container matColumnDef="surname">
+            <!-- <ng-container matColumnDef="surname">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
                 <td mat-cell *matCellDef="let client">{{client.surname}}</td>
-            </ng-container>
+            </ng-container> -->
             <!-- DNI column -->
             <ng-container matColumnDef="dni">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>DNI</th>
