--- a/Frontend/src/scss/components/_nav.scss
+++ b/Frontend/src/scss/components/_nav.scss
@@ -4,7 +4,7 @@
 {
     width: 100vw;
     background-color: $headerBackgroundColor;
-    height: 12vh;
+    height: $headerHeight;
     display: flex;
     justify-content: space-between;
 }
