--- a/Frontend/src/scss/components/_tipography.scss
+++ b/Frontend/src/scss/components/_tipography.scss
@@ -2,6 +2,12 @@ h1
 {
     font-size: 4vh;
     font-weight: 500;
+    margin-bottom: 0;
+}
+
+h3
+{
+    font-size: 2.5vh;
 }
 
 .welcome
@@ -10,4 +16,15 @@ h1
     {
         margin: 4vh 0;
     }
+}
+
+.pageTitle
+{
+    padding-left: 5vw;
+    padding-top: 3vh;
+}
+
+.topSpacing
+{
+    padding-top: 3vh;
 }
