--- a/Frontend/src/scss/layout/_header.scss
+++ b/Frontend/src/scss/layout/_header.scss
@@ -1,21 +1,49 @@
 @import '../abstracts/variables';
 
-.title
-{
-    padding: 0 6vw;
-}
-
 nav h1
 {
     color: $headerTitleColor;
 }
 
-.image
+.header
 {
-    padding: 0 1vw;
+    .image
+    {
+        padding: 0 1vw;
+        
+        img
+        {
+            height: 11vh;
+        }
+    }
+    
+    .title
+    {
+        padding: 6vw;
+    }
+
 }
 
-img
+.taskbar
 {
-    height: 11vh;
+    height: 6vh;
+    width: 100vw;
+    background-color: $bgColor;
+    color: $textColor;
+    padding-top: 2vh;
+
+    .welcome,
+    .icons
+    {
+        height: 6vh;
+        margin: 1.5vh;
+        font-size: 3vh;
+
+        .mat-icon
+        {
+            margin: 0 2vw;
+        }
+    }
 }
+
+
